# gha-ts

./: .gaji.toml  .gitignore  404.html  CHANGELOG.md  CLAUDE.md  CNAME  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  PHASE9_COMPLETION.md  README.md  ROADMAP.md  gaji.config.ts  hashmap.json  index.html
.github/: PULL_REQUEST_TEMPLATE.md
assets/: app.9lY_nilq.js  app.BsNgsTQS.js  app.C8OHcIBI.js  app.CAsKd7L7.js  app.CtPzzEOr.js  app.DXqL4Xwt.js  examples_composite-action.md.DecrRluI.js  examples_composite-action.md.DecrRluI.lean.js  examples_composite-action.md.lrISUspR.js  examples_composite-action.md.lrISUspR.lean.js  examples_javascript-action.md.B0hXP2Jm.js  examples_javascript-action.md.B0hXP2Jm.lean.js  examples_javascript-action.md.BHY2ZHIO.js  examples_javascript-action.md.BHY2ZHIO.lean.js  examples_javascript-action.md.pMvWXVS7.js  examples_javascript-action.md.pMvWXVS7.lean.js  examples_matrix-build.md.COJxvAYc.js  examples_matrix-build.md.COJxvAYc.lean.js  examples_matrix-build.md.DNhuZrMP.js  examples_matrix-build.md.DNhuZrMP.lean.js  examples_simple-ci.md.DjTmCgnv.js  examples_simple-ci.md.DjTmCgnv.lean.js  examples_simple-ci.md.LfTe18fc.js  examples_simple-ci.md.LfTe18fc.lean.js  guide_configuration.md.CNSBRrkj.js  guide_configuration.md.CNSBRrkj.lean.js  guide_configuration.md.DB9RC4ws.js  guide_configuration.md.DB9RC4ws.lean.js  guide_configuration.md.fDxDCcoG.js  guide_configuration.md.fDxDCcoG.lean.js  guide_getting-started.md.DDbT-dn6.js  guide_getting-started.md.DDbT-dn6.lean.js  guide_getting-started.md.DNxAdPIn.js  guide_getting-started.md.DNxAdPIn.lean.js  guide_installation.md.DTtP_xYa.js  guide_installation.md.DTtP_xYa.lean.js  guide_migration.md.CRYNGK4i.js  guide_migration.md.CRYNGK4i.lean.js  guide_migration.md.DP9FI8-L.js  guide_migration.md.DP9FI8-L.lean.js  (+98 more)
docs/: index.md  package-lock.json  package.json
examples/: composite-action.html  javascript-action.html  matrix-build.html  simple-ci.html
guide/: configuration.html  getting-started.html  installation.html  migration.html  why.html  writing-workflows.html
ko/: index.html
reference/: actions.html  api.html  cli.html
scripts/: sync-versions.sh  sync.sh
slidev/: slides.md
src/: builder.rs  cache.rs  cli.rs  config.rs  executor.rs  fetcher.rs  lib.rs  main.rs  watcher.rs
tests/: integration.rs
workflows/: audit.ts  ci.ts  docs-composite-action.ts  docs-matrix-build.ts  docs-simple-ci.ts  gaji.ts  js.ts  release-plz.ts  release.ts  update-workflows.ts  (+1 more)
(+106 files in other folders)
