[package]
name = "gha-ts"
version = "0.1.0"
edition = "2021"
description = "Type-safe GitHub Actions workflows in TypeScript"
license = "MIT"
repository = "https://github.com/gha-ts/gha-ts"
keywords = ["github-actions", "typescript", "ci-cd", "workflow"]
categories = ["development-tools", "command-line-utilities"]

[dependencies]
anyhow = "1.0.101"
clap = { version = "4.5.58", features = ["derive"] }
colored = "3.1.1"
indicatif = "0.18.3"
notify = "8.2.0"
oxc_allocator = "0.113.0"
oxc_ast = "0.113.0"
oxc_parser = "0.113.0"
oxc_span = "0.113.0"
reqwest = { version = "0.13.2", features = ["json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
serde_yaml = "0.9.34"
thiserror = "2.0.18"
tokio = { version = "1.49.0", features = ["full"] }

[dev-dependencies]
tempfile = "3.25.0"
