[package]
name = "gaji"
version = "0.4.1"
edition = "2021"
description = "Type-safe GitHub Actions workflows in TypeScript"
license = "MIT"
repository = "https://github.com/dodok8/gaji"
keywords = ["github-actions", "typescript", "ci-cd", "workflow"]
categories = ["development-tools", "command-line-utilities"]

[dependencies]
anyhow = "1.0.101"
clap = { version = "4.5.58", features = ["derive", "suggestions"] }
clap_complete = "4.5.66"
colored = "3.1.1"
dialoguer = "0.11"
futures = "0.3"
indicatif = "0.18.3"
notify = "8.2.0"
oxc_allocator = "0.113.0"
oxc_ast = "0.113.0"
oxc_codegen = "0.113.0"
oxc_parser = "0.113.0"
oxc_semantic = "0.113.0"
oxc_span = "0.113.0"
oxc_transformer = "0.113.0"
rquickjs = { version = "0.11.0", features = ["loader"] }
reqwest = { version = "0.13.2", features = ["json"] }
chrono = "0.4"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
serde_yaml = "0.9.34"
thiserror = "2.0.18"
tokio = { version = "1.49.0", features = ["full"] }
toml = "0.8"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true

[dev-dependencies]
tempfile = "3.25.0"
